文件编辑查看工具使用基础库

--- a/LibAceEditor/src/main/assets/editor/editor.html
+++ b/LibAceEditor/src/main/assets/editor/editor.html
@@ -137,7 +137,7 @@
         if (!big) {
             editor.session.setMode(edtFindByFileName(name));
         } else {
-            editor.session.setMode('ace/mode/text');
+            editor.session.setMode('ace/theme/github');
         }
 
         editor.setValue(atobu(edt_content), -1);
