--- a/BaseDebug/src/main/assets/webview_test.html
+++ b/BaseDebug/src/main/assets/webview_test.html
@@ -33,22 +33,27 @@
 </head>
 <body>
 <h1>神舟十六号</h1>
-
 <p>
-    <button onclick="showNativeView()">展示原生View</button>
+    <button onclick="addNativeView()">新增原生View</button>
 </p>
 <p>
-    <button onclick="hideNativeView()">隐藏原生View</button>
+    <button onclick="showNativeView()">展示原生View1</button>
 </p>
-
+<p>
+    <button onclick="hideNativeView()">隐藏原生View1</button>
+</p>
+<p>
+    <button onclick="removeNativeView()">移除原生View1</button>
+</p>
 <div id="section1">
     　　神舟十六号（简称神十六）是中国“神舟”系列飞船的第十六次任务和中国载人航天工程的第十一次载人飞行任务，也是中国空间站运营阶段的首次飞行任务。2023年5月30日于酒泉卫星发射中心发射，随后与天宫空间站天和核心舱径向端口对接，与神舟十五号完成在轨轮换任务[1]。计划在轨驻留5个月，于2023年11月返回。
 </div>
-<div id="native_view"></div>
+<div id="native_view_1"></div>
 
 <div id="section2">
     　　神舟十六号是第二批次并行批产的6艘飞船首船，详细内容尚未公开，但据央视透露，进行了两方面重大升级，一是使用中国国产元器件代替进口元器件，更换核心元器件，提升飞船自主可控能力；二是改进返回舱内传统的苏联式仪表面板布局，引入科技与人性化让航天员操作起来更直觉、方便、快捷[2]。按照中国空间站“发一备一”的安全指标，神舟十六号虽为新批次飞船，也已经在发射场完成了总装测试工作，进入应急救援待命状态[3]。
 </div>
+<div id="native_view_2"></div>
 
 <div id="section3">
     2022年6月，神舟十六号航天员乘组确定为景海鹏、朱杨柱、桂海潮3名航天员。本次乘组两位人员均为中国第三批航天员。
@@ -56,6 +61,7 @@
 <div id="section4">
     2022年11月29日，长征二号F遥十五火箭发射，长征二号F遥十六火箭完成准备工作，进入应急救援值班状态；神舟十六号载人飞船完成准备，具备快速发射和应急救援能力。
 </div>
+<div id="native_view_3"></div>
 <div id="section5">
     2023年5月22日，神十六船箭组合体转运至发射区，准备择机发射[4]。
 </div>
@@ -65,32 +71,45 @@
 <div id="section7">
     2023年5月30日9时31分，搭载神舟十六号载人飞船的长征二号F遥十六运载火箭在酒泉卫星发射中心点火发射，约10分钟后，神舟十六号载人飞船与火箭成功分离，进入预定轨道，航天员乘组状态良好，发射取得圆满成功。[6]本次发射任务代号为“TGZR5/SZ-16”。
 </div>
+<div id="native_view_4"></div>
 <div id="section8">
     2023年5月30日16时29分，神舟十六号采用自主快速交会对接模式成功对接于天和核心舱节点舱径向对接口。18时22分，神舟十六号乘组打开神舟飞船轨道舱径舱门，仍留守天宫空间站的神舟十五号航天员乘组打开天和核心舱舱门，两个航天员乘组第二次实现“太空会师”。
 </div>
 <script type="text/javascript">
 
+    var a = 1
+    function addNativeView() {
+        call('addNativeView', {viewKey:"native_view_" + a}, (res) => {
+            console.log(res)
+        })
+        a++
+    }
+
     function showNativeView() {
-        call('showNativeView', '', (res) => {
-            console.log("lwtor, showNativeView")
+        call('showNativeView', {viewKey:"native_view_1"}, (res) => {
             console.log(res)
         })
     }
 
     function hideNativeView() {
-        call('hideNativeView', '', (res) => {
-            console.log("lwtor, hideNativeView")
+        call('hideNativeView', {viewKey:"native_view_1"}, (res) => {
             console.log(res)
         })
     }
 
-    function getNativeViewPosition() {
-        var native_view = document.getElementById("native_view");
+    function removeNativeView() {
+        call('removeNativeView', {viewKey:"native_view_1"}, (res) => {
+            console.log(res)
+        })
+    }
+
+    function getNativeViewPosition(key) {
+        var native_view = document.getElementById(key);
         return native_view.offsetTop;
     }
 
-    function setNativeViewHeight(height) {
-        var native_view = document.getElementById("native_view");
+    function setNativeViewHeight(key,height) {
+        var native_view = document.getElementById(key);
         native_view.style.height=height+"px";
     }
 
