Webview 提供x5 内核与原生两种方式并改造相关库，分享APP可控制是否分享安装包

--- a/BaseDebug/src/main/assets/index.html
+++ b/BaseDebug/src/main/assets/index.html
@@ -8,8 +8,10 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com"/>
-    <meta name="keywords" content="腾讯手游加速器,加速"/>
-    <meta name="description" content="腾讯手游加速器"/>
+    <meta name="keywords" content="Zixie Webview测试页面"/>
+    <meta name="description" content="Zixie Webview测试页面"/>
+    <script src="https://cdn.bihe0832.com/js/jsbridge.js"></script>
+
     <title>Zixie Webview测试页面</title>
     <style type="text/css">
         body {
@@ -115,21 +117,6 @@
                 console.log(res)
             })
         }
-
-        function getNewCode(params) {
-            call('getNewCode',{ timeStamp:1234,}, (res) => {
-                console.log(res)
-              }
-            )
-        }
-
-        function startWechatAPP(params) {
-              call('startWechatAPP', {name:"gh_74d2c3f0e7d3",path:"pages/index/index",type:"0"}, (res) => {
-              console.log(res)
-              }
-             )
-        }
-
 
 </script>
 </body>
