--- a/BaseDebug/src/main/assets/index.html
+++ b/BaseDebug/src/main/assets/index.html
@@ -1,18 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com"/>
-    <meta name="keywords" content="Zixie Webview测试页面"/>
-    <meta name="description" content="Zixie Webview测试页面"/>
-    <script src="https://cdn.bihe0832.com/js/jsbridge.js"></script>
 
-    <title>Zixie Webview测试页面</title>
     <style type="text/css">
         body {
           background: #293553;
@@ -45,8 +39,6 @@
             padding-left: 0.5rem;
             padding-top: 0.5rem;
         }
-
-
 
 
     </style>
